# emon_tools

./: .example_env  .gitignore  LICENSE  README.md  requirements-all.txt  requirements-api.txt  requirements-async-api.txt  requirements-dev.txt  requirements-fastapi.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
backend/: .dockerignore  .example_env  .example_env_docker  Dockerfile  __init__.py  alembic.ini  backend_pre_start.py  initial_data.py  main.py  requirements-docker-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 5451f8a86af7_initial_mysql_migration.py  b084d745a76b_add_datapath_file_type_field.py  d2af2f312d14_add_homonhost_slug.py  e4f7162b7c55_add_datapath_type_and_add_emonhost_path.py
backend/api/: __init__.py  deps.py  main.py
backend/api/routes/: archive_file.py  category.py  dashboard.py  data_path.py  emon_api.py  emon_hosts.py  fina_data.py  login.py  private.py  users.py
backend/controllers/: __init__.py  base.py  dashboard.py  data_path.py  emon_api.py  emon_host.py  files.py  fina_data.py  users.py
backend/core/: __init__.py  config.py  database.py  db.py  deps.py  exceptions.py  security.py
backend/models/: __init__.py  base.py  db.py  emon_api.py  emon_fina.py  fina_data.py  shared.py  user.py
backend/scripts/: docker_start.sh  pre_start.sh  wait_for_db.sh
backend/tests/: conftest.py
backend/tests/api/: test_fina_data.py
backend/tests/utils/: test_emon_fina_helper.py  test_errors_parser.py  test_files.py  user.py  utils.py
backend/utils/: __init__.py  emon_fina_helper.py  errors_parser.py  files.py  paths.py
docker-compose/: .gitignore
docker-compose/dev/: .example_env  README.md  docker-compose.yml
emon-app/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.mts  vite.config.ts
emon-app/src/: App.css  App.tsx  index.css  layout.tsx  main.tsx  setupTests.ts  vite-env.d.ts
emon-app/src/contextes/: auth.context.tsx
emon-app/src/emon-tools-api/: dataViewerApi.ts  emonApi.ts
emon-app/src/helpers/: fetcher.ts  formActions.ts  graphHelper.ts  utils.ts
emon-app/src/hooks/: use-auth.ts  use-toast.ts
emon-app/src/lib/: comon-schemas.ts  graphTypes.ts  types.ts  utils.ts
emon-app/src/providers/: auth-provider.tsx
emon_tools/: __init__.py  api_common.py  api_utils.py  async_emon_api.py  async_emonpy.py  emon_api.py  emon_api_core.py  emon_fina.py  emonpy.py  emonpy_core.py  fina_plot.py  fina_reader.py  fina_time_series.py  fina_utils.py  utils.py
emon_tools/core/: __init__.py  utils.py
emon_tools/emon_api/: __init__.py  api_utils.py  async_emon_api.py  emon_api.py  emon_api_core.py
emon_tools/emon_fina/: emon_fina.py  fina_models.py  fina_plot.py  fina_reader.py  fina_services.py  fina_time_series.py  fina_utils.py
emon_tools/emonpy/: async_emonpy.py  emonpy.py  emonpy_core.py  emonpy_df.py
emon_tools/fastapi/: backend_pre_start.py  crud.py  initial_data.py  main.py
examples/: api_bulk_structure.py  emon_api.py
notebook/: emon_fina.ipynb  emon_fina_dev.ipynb
tests/: test_api_utils.py  test_async_emon_api.py  test_async_emon_feeds.py  test_async_emon_reader.py  test_async_emon_request.py  test_emon_api.py  test_emon_api_core.py  test_emonpy.py  test_fina_data.py  test_fina_meta_data.py  test_fina_plot.py  test_fina_reader.py  test_fina_stats.py  test_fina_time_series.py  test_fina_utils.py  test_np_fill_nan.py  test_utils.py
tests/core/: __init__.py  test_utils.py
tests/emon_api/: __init__.py  emon_api_data_test.py  emonpy_test_data.py  test_api_utils.py  test_async_emon_api.py  test_async_emonpy.py  test_emon_api.py  test_emon_api_core.py  test_emonpy.py
tests/emon_api_core/: test_api_utils.py  test_emon_api_core.py
tests/emon_fina/: __init__.py  fina_data_test.py  test_fina_data.py  test_fina_meta_data.py  test_fina_models.py  test_fina_plot.py  test_fina_reader.py  test_fina_services.py  test_fina_stats.py  test_fina_time_series.py  test_fina_utils.py  test_np_fill_nan.py
tests/emonpy/: __init__.py  emonpy_test_data.py  test_async_emonpy.py  test_emonpy.py  test_emonpy_core.py  test_emonpy_df.py
(+143 files in other folders)
