[metadata]
name = emon-tools
version = attr: emon_tools.__version__
author = Eli Serra
author_email = mano8@gmail.com
url = https://github.com/vemonitor/emon-tools
description = A numpy subclass to read emoncms PHPFINA feeds as numpy array
long_description = file: README.md
long_description_content_type = text/markdown
keywords = EmonCms, Python, PHPFINA
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
python_requires = >=3.8
install_requires =
    numpy>=2.2.0

[options.entry_points]
console_scripts = 
    my-example-utility = example.example_module:main

[options.extras_require]
test = 
    pytest>=8.3.4
    pytest-cov>=6.0.0
    coverage>=7.6.9
notebook = 
    jupyter>=1.0.0
    pandas>=2.2.3
    matplotlib>=3.9.3
emon_fina = 
    pandas>=2.2.3
    matplotlib>=3.9.3