[metadata]
name = emon-tools
version = attr: emon_tools.__version__
author = Eli Serra
author_email = mano8@gmail.com
url = https://github.com/vemonitor/emon_tools
description = A Python PHPFINA feeds and Api Tools to interact with EmonCms.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = EmonCms, Python, PhpFina, JsonApi
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
python_requires = >=3.10
    

[options.packages.find]
exclude = tests, datas, img, notebook, profiling, emon_app

[options.extras_require]
test = 
    pytest>=8.3.4
    pytest-cov>=6.0.0
    coverage>=7.6.9
    requests>=2.32.3
    aiohttp>=3.8.1
    pytest-aiohttp>=1.0.5
    pandas>=2.2.3
    matplotlib>=3.9.3
notebook = 
    jupyter>=1.0.0
    pandas>=2.2.3
    matplotlib>=3.9.3
time_series = 
    pandas>=2.2.3
plot = 
    pandas>=2.2.3
    matplotlib>=3.9.3
fina = 
    numpy>=2.2.0
api = 
    requests>=2.32.3
    simplejson>=3.19.3
async_api = 
    aiohttp>=3.8.1
    simplejson>=3.19.3
fastapi =
    fastapi >= 0.115.7
    uvicorn >= 0.34.0
    pydantic >= 2.10.6
    pydantic-settings >= 2.7.1
    PyJWT >= 2.10.1
    numpy>=2.2.0
all = 
    jupyter>=1.0.0
    numpy>=2.2.0
    aiohttp>=3.8.1
    requests>=2.32.3
    simplejson>=3.19.3
    pandas>=2.2.3
    matplotlib>=3.9.3
    fastapi >= 0.115.7
    uvicorn >= 0.34.0
    pydantic >= 2.10.6
    pydantic-settings >= 2.7.1
    PyJWT >= 2.10.1